freshed-rs-macros/tests/ui/fail/component_children_conflict_html_in.stderr
error: children provided both as prop and as child nodes
  --> tests/ui/fail/component_children_conflict_html_ctx.rs:16:34
   |
16 |     let _ = html_ctx!(ctx, <Panel children={text}>{"body"}</Panel>);
   |                                  ^^^^^^^^
